add_executable(deterministic_replay_test deterministic_replay_test.cpp)
phynity_target_defaults(deterministic_replay_test)
phynity_apply_warnings(deterministic_replay_test)
phynity_apply_sanitizers(deterministic_replay_test)
target_link_libraries(deterministic_replay_test PRIVATE phynity::tests Catch2::Catch2WithMain)
add_test(NAME validation.physics.deterministic_replay COMMAND ${CMAKE_COMMAND} -E env $<TARGET_FILE:deterministic_replay_test>)
